[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Login/Inputpopup.gd" type="Script" id=1]
[ext_resource path="res://art/login/LoginBG.png" type="Texture" id=2]
[ext_resource path="res://art/login/New Popup.png" type="Texture" id=3]
[ext_resource path="res://font/CarterOne.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://art/MainMenu/Cancel.png" type="Texture" id=5]
[ext_resource path="res://art/login/Submit.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="InputPopup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="btnBackground" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="popup" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.5
margin_top = -164.687
margin_right = 151.5
margin_bottom = 166.313
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_group_": true
}

[node name="PlayerName" type="Label" parent="popup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -111.5
margin_top = 69.2
margin_right = 111.5
margin_bottom = 108.2
custom_fonts/font = SubResource( 1 )
text = "Enter Your name"
align = 1

[node name="TextEdit" type="TextEdit" parent="popup"]
visible = false
anchor_left = 0.1
anchor_top = 0.3
anchor_right = 0.9
anchor_bottom = 0.5
margin_left = 10.0
margin_top = 27.5449
margin_right = -5.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.960784, 0.960784, 0.890196, 1 )

[node name="LineEdit" type="LineEdit" parent="popup"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 39.0
margin_top = -38.5
margin_right = -35.0
margin_bottom = 10.5
custom_fonts/font = SubResource( 3 )

[node name="close" type="Button" parent="popup"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_top = -14.0
margin_right = 47.0
margin_bottom = 87.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="Submit" type="Button" parent="popup"]
anchor_left = 0.2
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.7
margin_right = 184.5
margin_bottom = 7.8
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[connection signal="pressed" from="btnBackground" to="." method="_on_btnBackground_pressed"]
[connection signal="button_down" from="popup/close" to="." method="_on_close_button_down"]
[connection signal="button_up" from="popup/close" to="." method="_on_close_button_up"]
[connection signal="pressed" from="popup/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="popup/Submit" to="." method="_on_Submit_pressed"]
